[#651] Fix paddings on mobile

--- a/frontend/src/modules/knowledge-library/styles.scss
+++ b/frontend/src/modules/knowledge-library/styles.scss
@@ -776,7 +776,9 @@
       padding: 5px;
       padding-bottom: 110px;
     }
-
+    @media (max-width: 540px) {
+      padding: 10px 24px;
+    }
     .resource-item-wrapper {
       width: 100%;
       &:hover {
@@ -905,6 +907,9 @@
     @-moz-document url-prefix() {
       max-width: 350px !important;
     }
+    @media (max-width: 540px) {
+      padding: 1rem 24px 1rem 24px;
+    }
     .result-number,
     .ant-pagination-item a {
       font-weight: bold;
@@ -1005,7 +1010,7 @@
   @media (max-width: 540px) {
     .topic-view {
       align-self: center;
-      max-width: 90%;
+      max-width: calc(100% - 48px);
       padding-left: 20px;
       padding-right: 20px;
       padding: 10px 10px 0 10px;
